--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,6 +7,10 @@
     clear: both;
 
 }
+#root {
+    max-width: 1440px;
+    margin: 0 auto;
+  } 
 :root{
 --cerulean:#0089cf;
 --greeny-blue:#3db39e;
@@ -18,19 +22,17 @@
 
 @font-face {
     font-family: 'DroidSansArabic';
-   
     src: url(./fonts/Droid\ Sans\ Arabic\ Regular.ttf);
 }
 
-body{
-    width: 1440px;
-    font-family: 'DroidSansArabic';
-    
+html{
+    margin: 0 auto;
+    max-width: 1440px;
 }
-/* main{
-
-    background-color: rgba(245, 247, 250, 0.5);
-} */
+#main{
+width: 1440px;
+background-color: rgba(245, 247, 250, 0.5);
+}
 .header{
     background-image: url(../img/header/rectangle-copy-4@2x.png);
     width: 1440px;
@@ -278,7 +280,7 @@ margin-right: 20px;
     width: 440px;
     height: 406px;
     border-radius: 6.6px;
-  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 1px 2px 1px 1px rgba(0, 0, 0, 0.12), 1px 1px 1px 1px rgba(0, 0, 0, 0.14);
   background-color: var(--calcite);
   padding: 0;
   margin-left: 20px;
@@ -287,9 +289,116 @@ margin-right: 20px;
   left: -5px;
 
 }
-.items .col-md-4 .car-img{
+.items .col-md-4.banner{
+    width: 440px;
+    height: 406px;
+    padding: 0;
+    margin-left: 20px;
+    margin-top: 20px;
+    position: relative;
+    left: -5px;
+    border-radius: 6.6px;
+    box-shadow: none;
+    /* box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14); */
+
+    background-color: rgba(245, 247, 250, 0.5);
+    }
+.col-md-4.banner{
+    border: solid 2px var(--cerulean);
+}
+.col-md-4.banner img{
+    width: 99px;
+    height: 100px;
+    margin: 33px 171px 0px 170px;
+    object-fit: contain;
+}
+.col-md-4.banner h4{
+    margin: 13px 68.5px 19px 73.5px;
+    font-family: 'DroidArabicKufi';
+    font-size: 20px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: var(--colors-on-background);
+
+}
+
+
+.col-md-4.banner .com{
+
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+
+    color: var(--colors-on-background);
+  }
+
+  .col-md-4.banner .con{
+    margin: 19px 52px 27px 57px;
+
+    width: 331px;
+    height: 96px;
+    text-align: center;
+  }
+
+
+.col-md-4.banner .btn-item-ads{
+    width: 231px;
+    height: 56px;
+    margin: 27px 102px 0;
+    padding: 20px 42px 10px 68px;
+    border-radius: 6px;
+    background-color: var(--cerulean);
+}
+.col-md-4.banner .btn-item-ads span{
+ 
+    font-family: 'DroidArabicKufi';
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: right;
+    color: var(--calcite);
+  
+
+}
+.col-md-4.banner .btn-item-ads1{
+    width: 231px;
+    height: 56px;
+    margin: 27px 102px 0;
+    padding: 20px 42px 10px 90px;
+    border-radius: 6px;
+    background-color: var(--cerulean);
+}
+.col-md-4.banner .btn-item-ads1 span{
+ 
+    font-family: 'DroidArabicKufi';
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: right;
+    color: var(--calcite);
+  
+
+}
+
+.col-md-4 .car-img{
     width: 100%;
     height: 271px;
+    border-top-right-radius: 6.6px;
+    border-top-left-radius: 6.6px;
   
 }
 .items .col-md-4 .img-left{
@@ -308,6 +417,39 @@ margin-right: 20px;
     right: 18px;
     bottom: 118px;
 }
+/* test chay anh */
+.image-item1{
+    
+   height: 271px;
+    width: 440px;
+
+}
+.carousel-inner .car-img1{ 
+   min-height: 271px;
+   width: 100%;
+    border-top-right-radius: 6.6px;
+    border-top-left-radius: 6.6px;
+  
+}
+.items .col-md-4 .img-right1{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 113px;
+    right: 18px;
+    bottom: 118px;
+    z-index: 1;
+}
+.items .col-md-4 .img-left1{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 113px;
+    left: 18px;
+    bottom: 118px;
+    z-index: 1;
+}
+/* end test */
 .car-name .-SAR{
    position: absolute;
    margin: 23px 186px 4px 17px;
@@ -526,6 +668,7 @@ max-height: 29px;
     bottom: 118px;
 }
 .aaaa{
+    width: 1440px;
     background-color: rgba(245, 247, 250, 0.5);
 }
 .banner2{
@@ -565,7 +708,7 @@ border-radius: 6px;
 }
 
 .banner2 .banner2-content{
-position: absolute;
+position: relative;
 width: 518px;
 height: 295px;
 
@@ -579,7 +722,7 @@ left: 389px;
 .banner2 .banner2-img{
     position: relative;
     left: 1009px;
-    top: 81px;
+    top: -240px;
     
     width: 200px;
     height: 200px;
@@ -631,6 +774,7 @@ left: 389px;
         height: 995px;
         
     }
+    
     .items3 .col-md-4{
         width: 440px;
         height: 406px;
