--- a/assets/CSS/style3.css
+++ b/assets/CSS/style3.css
@@ -32,7 +32,7 @@
     top: 0;
     right: 0;
     bottom: 0px;
-    left: 0;
+    left: 15px;
     padding: 20px;
     display: none;
     animation: modalFadeIn ease 0.3s;
