--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -137,6 +137,7 @@ height: 20px;
 
 
 .upper-bar{
+    z-index: 2;
 background-color: rgba(245, 247, 250, 0.5);
     width: 1440px;
     height: 124.5px;
@@ -178,6 +179,7 @@ background-color: rgba(245, 247, 250, 0.5);
 }
 
 .upper-bar.list{
+    z-index: 1;
     right: 40px;
     margin-left: 40px;
     margin-top: 40px;
@@ -1107,3 +1109,15 @@ object-fit: contain;
     color: var(--calcite);
   }
   
+.js-clock-list{
+
+    position: absolute;
+    border: none;
+    background: #ffffff;
+}
+.js-year-list{
+
+    position: absolute;
+    border: none;
+    background: #ffffff;
+}
