--- a/assets/CSS/style3.css
+++ b/assets/CSS/style3.css
@@ -26,29 +26,32 @@
     src: url(./fonts/Droid\ Sans\ Arabic\ Regular.ttf);
 }
 .modal-clock{
-    
+    margin: 0 auto;
+    width: 1440px;
     position: fixed;
-    /* z-index: 1; */
+    
     top: 0;
     right: 0;
     bottom: 0px;
-    left: 15px;
-    padding: 20px;
+    left: 0px;
+    /* padding: 20px; */
     display: none;
     animation: modalFadeIn ease 0.3s;
 }
 .modal-clock.open{
+    z-index: 2;
     display: flex;
-    /* background: rgba(51, 170, 51, .1); */
-    /* background-color: violet; */
-    
+    background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
 }
 .modal-container{
     width: 583px;
-  height: 653px;
+  height: 597px;
   position: absolute;
-  top: 127px;
+  top: 183px;
   left: 19px;
+  bottom: 0px;
+  z-index: 5 ;
   
   padding: 22px 40px 93px 21px;
   border: solid 0.5px rgba(38, 50, 56, 0.13);
@@ -57,7 +60,7 @@
 }
 
 .modal-header .header-from{
-    top: 135px;
+    top: 79px;
     left: 35px;
     position: absolute;
     width: 235px;
@@ -72,7 +75,7 @@
     width: 149px;
     height: 31px;
     position: relative;
-    top: 92px;
+    top: 36px;
     left: 420px;
     font-family: 'DroidArabicKufi';
     font-size: 16px;
@@ -97,7 +100,7 @@
 }
 .modal-header .header-to{
     position: absolute;
-     top: 135px;
+     top: 79px;
     right: 41px; 
     width: 235px;
     height: 49px; 
@@ -112,7 +115,7 @@
     width: 235px;
     height: 1px;
     position: absolute;
-    top: 216px;
+    top: 160px;
     left: 34px;
     border: solid 1px #c5c5c5;
   }
@@ -120,7 +123,7 @@
     width: 235px;
     height: 1px;
     position: absolute;
-    top: 216px;
+    top: 160px;
     right: 41px;
     border: solid 1px #c5c5c5;
   }
@@ -128,7 +131,7 @@
     width: 10px;
     height: 17px;
     position: absolute;
-    top: 208px;
+    top: 152px;
     right: 290px;
     font-family: 'DroidSansArabic';
     font-size: 12px;
@@ -145,7 +148,7 @@
     width: 142px;
   height: 31px;
   position: absolute;
-  top: 249px;
+  top: 193px;
   left: 401px;
     font-family: 'DroidArabicKufi';
     font-size: 16px;
@@ -162,7 +165,7 @@
 max-width: 550px;
 max-height: 300px;
 position: absolute;
-top: 292px;
+top: 236px;
 /* left: 32px; */
 
 }
@@ -211,7 +214,9 @@ top: 292px;
     /* modal year */
 .modal-year{
     position: fixed;
-    /* z-index: 5; */
+    width: 1440px;
+    margin: 0 auto;
+    /* z-index: 2; */
     top: 0;
     right: 0;
     bottom: 0px;
@@ -220,26 +225,29 @@ top: 292px;
     animation: modalFadeIn ease 0.3s;
 }
 .modal-year.open{
+    z-index: 3;
 display: flex;
-/* z-index: 1; */
-/* background-color: rgba(51, 170, 51, .1); */
+background-color: rgb(0,0,0); 
+background-color: rgba(0,0,0,0.4);
 
 }
 .modal-year-container{
 position: relative;
 width: 650px;
-height: 513px;
-top: 127px;
+height: 457px;
+top: 183px;
 left: 361px;
 border: solid 0.5px rgba(38, 50, 56, 0.13);
 background-color: var(--calcite);
+z-index: 6 ;
+
 
 }
 .year-enter{
 width: 89px;
 height: 31px;
 position: relative;
-top: 112px;
+top: 56px;
 left: 555px;
 font-family: 'DroidArabicKufi';
 font-size: 16px;
@@ -262,12 +270,12 @@ background-color: var(--calcite);
 .year-from{
 padding: 15px 110px 15px 24px;
 position: relative;
-top: 155px;
+top: 99px;
 left: 104px;
 }
 .year-to{
 position: relative;
-top: 106px;
+top: 50px;
 left:379px;
 padding: 15px 110px 15px 24px;
 
@@ -287,14 +295,14 @@ color: var(--colors-on-background);
 width: 235px;
 height: 1px;
 position: absolute;
-top: 236px;
+top: 180px;
 left: 104px;
 border: solid 1px #c5c5c5;
 }
 .year-or{
 font-family: 'DroidSansArabic';
 position: absolute;
-top: 236px;
+top: 180px;
 left: 355px;
 font-size: 12px;
 font-weight: normal;
@@ -310,7 +318,7 @@ color: var(--colors-on-background);
 width: 235px;
 height: 1px;
 position: relative;
-top: 120px; 
+top: 64px; 
  left: 379px;
 border: solid 1px #c5c5c5;
 }
@@ -319,7 +327,7 @@ border: solid 1px #c5c5c5;
 width: 228px;
 height: 31px;
 position: absolute;
-top: 269px;
+top: 213px;
 right: 36px;
 font-family: 'DroidSansArabic';
 font-size: 12px;
@@ -348,7 +356,7 @@ margin-left: 61px;
 margin-bottom: 29px;
 padding: 18px 46px 20px 44px;
 position: relative;
-top: 200px;
+top: 144px;
 left: 33px;
 float: left;
 border-radius: 7.4px;
@@ -371,4 +379,705 @@ font-style: normal;
 line-height: normal;
 letter-spacing: 0.75px;
 color: var(--colors-on-background);
+}
+/* modal model */
+.modal-model{
+    position: fixed;
+    width: 1440px;
+    margin: 0 auto;
+    /* z-index: 2; */
+    top: 0;
+    right: 0;
+    bottom: 0px;
+    left: 0;
+    display: none;
+    
+    animation: modalFadeIn ease 0.3s;
+}
+
+.model-container{
+    overflow-y: auto ;
+    overflow-x: hidden ;
+    position: absolute;
+    width: 473px;
+    height: 689px;
+    top: 183px;
+    left: 670px;
+    right: 297px;
+    border: solid 0.5px rgba(38, 50, 56, 0.13);
+    background-color: var(--calcite);
+    z-index: 6 ;
+    
+}
+.modal-model.open{
+    z-index: 3;
+display: flex;
+background-color: rgb(0,0,0); 
+background-color: rgba(0,0,0,0.4);
+
+}
+.model-text{
+    height: 50px;
+    width: 416px;
+    background-color: #c5c5c5;
+    position: relative;
+    top: 25px;
+    left: 27px;
+    right: 30px;
+    /* text-align: right; */
+    padding: 16px 19px 14px 167px;
+    border-radius: 6px;
+    background-color: #f6f9fc;
+    border: none;
+    opacity: 0.4;
+    font-family: 'DroidSansArabic';
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: var(--colors-on-background);
+  }
+#model-shape{
+    
+position: relative;
+top: 24px;
+right: 20px;
+cursor: pointer;
+
+}
+ .model-car-maker span{
+    position: absolute;
+    top: 99px;
+    /* left: 308px; */
+    right: 30px;
+    font-family: 'DroidArabicKufi';
+    font-size: 16px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: var(--colors-on-background);
+}
+
+.model-list-car{
+    
+    position: relative;
+    top: 91px;
+    left: 221px;
+    height: 58px;
+    width: 227px;
+    /* background-color: #feca57; */
+    padding: 10px 12px 13px 23.7px;
+    border-radius: 6px;
+}
+.model-list-car:hover{
+     border: solid 1px var(--cerulean);
+     cursor: pointer;
+     box-sizing: border-box;
+}
+
+.model-list-car img{
+    float: right;
+
+}
+
+.model-list-car span{
+   position: absolute;
+   float: right;
+   right: 120px;
+    font-family: Helvetica;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 4;
+    letter-spacing: normal;
+    text-align: right;
+    color: var(--colors-on-background);
+}
+
+/* modal-price */
+.modal-price{
+    position: fixed;
+    width: 1440px;
+    margin: 0 auto;
+    /* z-index: 2; */
+    top: 0;
+    right: 0;
+    bottom: 0px;
+    left: 0;
+    display: none;
+    
+    animation: modalFadeIn ease 0.3s;
+}
+.modal-price.open{
+    z-index: 2;
+    display: flex;
+    background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+.price-container{
+    overflow-y: auto ;
+    overflow-x: hidden ;
+    position: absolute;
+    width: 623px;
+    height: 627px;
+    top: 183px;
+    left: 799px;
+    right: 18px;
+    border: solid 0.5px rgba(38, 50, 56, 0.13);
+    background-color: var(--calcite);
+    z-index: 6 ;
+
+}
+.enter-price{
+    width: 155px;
+  height: 31px;
+  position: relative;
+  left: 438px;
+  top: 36px;
+  right: 40px;
+  font-family: DroidSansArabic;
+  font-size: 10px;
+  font-weight: normal;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.gird-container-price{
+    position: absolute;
+display: grid;
+grid-template-columns: auto auto;
+top: 79px;
+left: 72px;
+grid-gap: 30px;
+
+
+}
+.gird-enter-price{
+    width: 235px;
+    height: 49px;
+    opacity: 0.4;
+    border-radius: 6px;
+    padding: 14px 81px 13px 77px;
+    text-align: center;
+    opacity: 0.5;
+    font-family: Helvetica;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: var(--cerulean);
+  
+    border: solid 1px var(--cerulean);
+    background-color: var(--calcite);
+}
+.gird-container.price-items{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 24px;
+    padding: 206px 41px 50px 72px;
+}
+.gird-container .price-item{
+width: 235px;
+height: 49px;
+border-radius: 6px;
+padding: 13px 41px 15px;
+border: solid 1px var(--cerulean);
+background-color: var(--calcite);
+/* background-color: lawngreen; */
+text-align: center;
+}
+.price-item span{
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.75px;
+    text-align: center;
+    color: var(--colors-on-background);
+}
+.Line-8-Copy-price{
+    position: relative;
+    top: 140px;
+    left: 70px;
+    width: 235px;
+  height: 1px;
+  border: solid 1px #c5c5c5;
+}
+.Line-8-price{
+    position: relative;
+    top: 138px;
+    left: 347px;
+    width: 235px;
+  height: 1px;
+  border: solid 1px #c5c5c5;
+}
+.price-moldel{
+    position: absolute;
+    top: 200px;
+    left: 436px;
+    font-family: 'DroidSansArabic';
+    font-size: 10px;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 0.5);
+}
+ .Pricebold{
+    font-family: 'DroidArabicKufi';
+    font-size: 16px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: right;
+    color: var(--colors-on-background);
+}
+footer{
+    position: relative;
+margin-top: 997px;
+width: 1440px;
+height: 600px;
+/* left: 100px; */
+background-color: rgba(245, 247, 250, 0.5);
+}
+.Line-13 {
+    position: relative;
+    width: 1440px;
+    height: 1px;
+    border: solid 1px#979797;
+  }
+
+
+.back-top{
+    position: relative;
+    width: 231px;
+    height: 56px;
+    top: 62px;
+    left: 40px;
+    padding: 16px 30px 16px 55px;
+    border-radius: 6px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
+    border: solid 1px var(--cerulean);
+    background-color: var(--calcite);
+}
+.back-top span{
+    position: relative;
+    width: 93px;
+    height: 22px;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.11px;
+    text-align: center;
+    color: var(--colors-on-background);
+}
+
+.back-top img{
+    position: relative;
+    width: 24px;
+    height: 13px;
+    left: 30px;
+    object-fit: contain;
+ 
+  }
+
+.sub{
+
+top: 60px;
+left: 500px;
+position: absolute;
+width: 534px;
+height: 50px;
+object-fit: contain;
+
+}
+.sub img{
+
+    margin: 0 20px 0 0;
+    object-fit: contain;
+}
+.sub span{
+    margin-left: -4px;
+    max-width: 242px;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000;
+}
+.footer-connect{
+    position: absolute;
+    
+    top: 150px;
+    left: 1116px;
+    width: 286px;
+    height: 70px;
+    width: 286px;
+    height: 70px;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
+    border: solid 1px var(--cerulean);
+    background-color: var(--calcite);
+  }
+
+  .footer-connect span{
+    width: 66px;
+    height: 19px;
+    /* margin: 30px 15px 20px 100px; */
+    position: absolute;
+    top: 27px;
+    left: 148px;
+    font-family:'DroidSansArabic';
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: right;
+    color: #000;
+  }
+  .footer-connect img.up-arrow {
+      position: relative;
+    width: 24px;
+    height: 24px;
+    top: 23px;
+    left: 23px;
+    object-fit: contain;
+  }
+.footer-connect img.chat {
+    position: absolute;
+    width: 27px;
+    height: 27px;
+    right: 30px;    
+    top: 22px;
+    object-fit: contain;
+  }
+
+  .background-footer{
+    position: absolute;
+    width: 1439px;
+    height: 373px;
+    left: -1116px;
+    margin-top: 40px;
+    padding: 40px 0 24px;
+    background-color: var(--cerulean);
+  }
+  .background-footer .help{
+      position: absolute;
+      width: 119px;
+      height: 172px;
+      left: 224px;
+      top: 78px;
+      /* background-color: #feca57; */
+  }
+
+
+  .background-footer .service{
+    position: absolute;
+    /* background-color: #feca57; */
+    left: 685px;
+    top: 78px;
+ 
+  }
+.service  span{
+    position: relative;
+    width: 132px;
+    margin-top: 28px;
+    top: -30px;
+    right: 132px;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.63;
+    letter-spacing: 0.1px;
+    color: var(--calcite);
+    float: right;
+}
+.service .service-title{
+    font-family: 'DroidArabicKufi';
+    font-size: 20px;
+    width: 132px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.3;
+    letter-spacing: normal;
+    color: var(--calcite);
+}
+
+.help  span{
+    position: relative;
+    width: 132px;
+    margin-top: 28px;
+    top: -30px;
+    right: 132px;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.63;
+    letter-spacing: 0.1px;
+    color: var(--calcite);
+    float: right;
+}
+.help .help-title{
+    font-family: 'DroidArabicKufi';
+    font-size: 20px;
+    width: 132px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.3;
+    letter-spacing: normal;
+    color: var(--calcite);
+}
+
+.background-footer .footer-logo{
+    position: absolute;
+    width: 212px;
+    height: 98px;
+    /* background-color: #feca57; */
+    top: 40px;
+    right: 40px;
+}
+.logo-content span{
+    width: 180px;
+    height: 22px;
+    left: 1221px;
+    top: 116px;
+    position: absolute;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.11px;
+    text-align: center;
+    color: var(--calcite);
+}
+
+.Line {
+    width: 1439px;
+    height: 1px;
+    bottom: 71px;
+    position:absolute;
+    opacity: 0.3;
+    border: solid 1px var(--calcite);
+  }
+.background-footer .footer-copy{
+    width: 309px;
+    height: 23px;
+    position: absolute;
+    top: 326px;
+    margin-left: 416px;
+    font-family: 'DroidSansArabic';
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.64;
+    letter-spacing: 0.1px;
+    text-align: center;
+    color: var(--calcite);
+  }
+
+  /* modal-connect */
+  .modal-connect{
+    position: fixed;
+    width: 1440px;
+    margin: 0 auto;
+    /* z-index: 2; */
+    top: 0;
+    right: 0;
+    bottom: 0px;
+    left: 0;
+    display: none;
+    animation: modalFadeIn ease 0.3s;
+  }
+  .js-modal-connect{
+    cursor: pointer;
+  }
+  .modal-connect.open{
+    z-index: 3;
+    display: flex;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+  }
+
+.modal-connect-container{
+position: relative;
+width: 444px;
+height: 840px;
+bottom: -100px;
+left: 967px;
+border: solid 0.5px rgba(38, 50, 56, 0.13);
+background-color: var(--calcite);
+z-index: 6 ;
+border-radius: 10px;
+
+}
+
+.footer-img-up{
+    object-fit: contain;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    left: 24px;
+    top: 20px;
+}
+.con-text{
+    position: absolute;
+    top: 24px;
+    left: 345px;
+    font-family: 'DroidSansArabic';
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: right;
+    color: #000;
+}
+.con-Line{
+    position: relative;
+    top: 40px;
+    width: 443px;
+  height: 1px;
+  /* margin: 0 0 302px; */
+  border: solid 1px #979797;
+}
+.con-text-time{
+    position: absolute;
+    top: 83px;
+    margin: 0 24px;
+    font-family: 'DroidSansArabic';
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.25;
+    letter-spacing: normal;
+    text-align: right;
+    color: var(--colors-on-background);
+}
+.con-name{
+    position: relative;
+    top: 137px;
+    left: 343px;
+    font-family: 'DroidArabicKufi';
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: var(--colors-on-background);
+}
+.con-enter-name{
+    position: relative;
+    display: inline-block;
+    top: 155px;
+    width: 396px;
+    height: 56px;
+    left: 24px;
+    padding: 20px 16px 15px 283px;
+    border-radius: 4px;
+    border: solid 1px #c5c5c5;
+    background-color: #f4f4f4;
+}
+.con-phone{
+    position: absolute;
+    top: 280px;
+    right: 24px;
+    font-family: 'DroidArabicKufi';
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: var(--colors-on-background);
+}
+.con-enter-phone{
+    position: absolute;
+    /* display: inline-block; */
+    top: 310px;
+    width: 396px;
+    height: 56px;
+    left: 24px;
+    padding: 20px 16px 15px 283px;
+    border-radius: 4px;
+    border: solid 1px #c5c5c5;
+    background-color: #f4f4f4;
+}
+.con-pur{
+    position: absolute;
+    top: 385px;
+    right: 24px;
+    font-family: 'DroidArabicKufi';
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: var(--colors-on-background);
+}
+.con-enter-pur{
+    position:  absolute;
+    /* display: inline-block; */
+    top: 410px;
+    width: 396px;
+    height: 56px;
+    left: 24px;
+    padding: 20px 16px 15px 283px;
+    border-radius: 4px;
+    border: solid 1px #c5c5c5;
+    background-color: #f4f4f4;
+}
+.con-cont{
+    position: absolute;
+    top: 486px;
+    right: 24px;
+    font-family: 'DroidArabicKufi';
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: var(--colors-on-background);
+}
+.con-enter-cont{
+    position: relative;
+    /* display: inline-block; */
+    top: 421px;
+    width: 396px;
+    height: 222px;
+    left: 24px;
+    padding: 20px 16px 15px 283px;
+    border-radius: 4px;
+    border: solid 1px #c5c5c5;
+    background-color: #f4f4f4;
+    
 }
