--- a/assets/CSS/style3.css
+++ b/assets/CSS/style3.css
@@ -209,6 +209,16 @@ top: 236px;
         transform: translateY();
     }
     }
+    @keyframes modalFadeIn1 {
+        from{
+            opacity: 0;
+            transform: translateY(540px);
+        }
+        to {
+            /* opacity: 1; */
+            transform: translateY();
+        }
+        }
 
 
     /* modal year */
@@ -237,6 +247,7 @@ width: 650px;
 height: 457px;
 top: 183px;
 left: 361px;
+bottom: 100px;
 border: solid 0.5px rgba(38, 50, 56, 0.13);
 background-color: var(--calcite);
 z-index: 6 ;
@@ -911,7 +922,7 @@ object-fit: contain;
     bottom: 0px;
     left: 0;
     display: none;
-    animation: modalFadeIn ease 0.3s;
+    animation: modalFadeIn1 ease 0.3s;
   }
   .js-modal-connect{
     cursor: pointer;
