--- a/assets/CSS/style3.css
+++ b/assets/CSS/style3.css
@@ -489,6 +489,7 @@ cursor: pointer;
      border: solid 1px var(--cerulean);
      cursor: pointer;
      box-sizing: border-box;
+     /* background-color: var(--calcite) !important; */
 }
 
 .model-list-car img{
@@ -938,12 +939,13 @@ object-fit: contain;
 position: relative;
 width: 444px;
 height: 840px;
-bottom: -100px;
+/* bottom: -100px; */bottom: 10px;
 left: 967px;
 border: solid 0.5px rgba(38, 50, 56, 0.13);
 background-color: var(--calcite);
 z-index: 6 ;
 border-radius: 10px;
+/* margin-bottom: 600px; */
 
 }
 
@@ -1091,4 +1093,50 @@ border-radius: 10px;
     border: solid 1px #c5c5c5;
     background-color: #f4f4f4;
     
+}
+.items3{
+    background-color: rgba(245, 247, 250, 0.5);
+   padding: 0;
+    height: auto;
+    position: absolute;
+    width: 1440px;
+    margin-left: 0px;
+    height: 995px;
+    
+}
+
+.items3 .col-md-4{
+    width: 440px;
+    height: 406px;
+    border-radius: 6.6px;
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
+  background-color: var(--calcite);
+  padding: 0;
+  margin-left: 20px;
+  margin-top: 20px;
+  position: relative;
+  left: 20px;
+
+
+}
+.items3 .col-md-4 .car-img{
+    width: 100%;
+    height: 271px;
+  
+}
+.items3 .col-md-4 .img-left{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 113px;
+    left: 18px;
+    bottom: 118px;
+}
+.items3 .col-md-4 .img-right{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 113px;
+    right: 18px;
+    bottom: 118px;
 }
